--- a/src/sass/components/_back-to-top.scss
+++ b/src/sass/components/_back-to-top.scss
@@ -3,13 +3,13 @@
     height: 50px;
     display: none;
     position: fixed; 
-    bottom: 20px; 
+    bottom: 70px; 
     right: 30px; 
     z-index: 99; 
     line-height: 15px;
     border: none; 
     outline: none; 
-    background-color: $thirty-text-color; 
+    background-color: rgba(49, 49, 49, 0.6); 
     color: $accent-text-color; 
     cursor: pointer; 
     padding: 11px;
