--- a/src/sass/utils/_common.scss
+++ b/src/sass/utils/_common.scss
@@ -57,7 +57,7 @@ img {
   }
   @media screen and (min-width: 768px) {
     min-width: 768px;
-    max-width: 1023px;
+    //max-width: 1023px;
     padding: 0 75px;
   }
   @media screen and (min-width: 1024px) {
