--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -10,10 +10,8 @@
 
   @media screen and (min-width: 320px) {
     padding-top: 0;
-
+  }
 }
-
-
 .gallery__list {
   margin: 20px;
   transform: scale(1);
@@ -69,10 +67,7 @@
   .main {
     padding-top: 60px;
     padding-bottom: 20px;
-
   }
-
-  
 
   .gallery {
     display: flex;
